refactor: update project-wide codebase, security filters, and add internationalization support